--- a/action.yaml
+++ b/action.yaml
@@ -37,7 +37,7 @@ runs:
     - run: |
         ls $GITHUB_WORKSPACE
         pwd
-        ls
+        export
       shell: bash
       env:
         USERNAME: ${{ inputs.username }}
